--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "source": "https://github.com/uranum/yii2-excel-exchange"
   },
   "require": {
+    "php": "~7.0.0",
     "yiisoft/yii2": "~2.0",
     "yiisoft/yii2-bootstrap": "*",
     "phpoffice/phpexcel": "*"
@@ -32,7 +33,8 @@
   },
   "autoload": {
     "psr-4": {
-      "uranum\\excel\\": "src"
+      "uranum\\excel\\": "src",
+      "uranum\\excel\\docs": "docs"
     }
   },
   "autoload-dev": {
