--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   "autoload": {
     "psr-4": {
       "uranum\\excel\\": "src",
-      "uranum\\excel\\docs": "docs"
+      "uranum\\excel\\docs\\": "docs"
     }
   },
   "autoload-dev": {
