--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "uranum/yii2-excel-exchange",
   "description": "Yii2 extension for exchanging a data from DB to excel and back again for Yii2 Framework.",
-  "type": "library",
+  "type": "package",
   "keywords": [
     "yii2",
     "yii 2",
@@ -33,8 +33,7 @@
   },
   "autoload": {
     "psr-4": {
-      "uranum\\excel\\": "src",
-      "uranum\\excel\\docs\\": "docs"
+      "uranum\\excel\\": "src"
     }
   },
   "autoload-dev": {
